--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,34 @@
-version: "3.8"
-
 services:
-  app:
-    build: .
-    container_name: diplom-app
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: "jdbc:postgresql://db:5432/diploma_thesis"
-      SPRING_DATASOURCE_USERNAME: "postgres"
-      SPRING_DATASOURCE_PASSWORD: "batman05"
-    depends_on:
-      db:
-        condition: service_healthy
-
   db:
     image: postgres:15
-    container_name: diplom-db
-    restart: always
-    ports:
-      - "5432:5432"
+    container_name: postgres-db
     environment:
       POSTGRES_DB: diploma_thesis
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: batman05
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    networks:
+      - diplom-network
+
+  app:
+    build: .
+    container_name: diplom-app
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/diploma_thesis
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: batman05
+    networks:
+      - diplom-network
 
 volumes:
   pgdata:
+
+networks:
+  diplom-network:
