--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:15
@@ -10,14 +12,26 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./docker/db/init:/docker-entrypoint-initdb.d:ro
     networks:
       - diplom-network
+
+    # ← Добавляем healthcheck
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d diploma_thesis"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   app:
     build: .
     container_name: diplom-app
+
+    # ← Ждём, пока db не станет healthy
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+
     ports:
       - "8080:8080"
     environment:
