--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
 			<artifactId>javase</artifactId>
 			<version>3.5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>24.10.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
